--- a/Denis.html
+++ b/Denis.html
@@ -2,72 +2,90 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="pruebasDenis.js"></script>
 </head>
 
 <body>
-  <div class="container">
-    <header class="mt-3">
-      <div class="row">
-        <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
-            class="rounded-circle"></div>
-        <div class="col-sm-10">
-          <h1 class="text-black text-center pt-5">PAISES DEL MUNDO</h1>
+    <div class="container mt-4">
+        <header class="mt-3">
+            <div class="row">
+                <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+                        class="rounded-circle"></div>
+                <div class="col-sm-10">
+                    <h1 class="text-black text-center pt-5">PAISES DEL MUNDO</h1>
+                </div>
+            </div>
+        </header>
+        <div>
+            <nav class="text-center">
+                <button type="button" class="btn btn-info">Datos Generales</button>
+                <button type="button" class="btn btn-info">Datos Geográficos</button>
+                <button type="button" class="btn btn-info">Traducciones</button>
+                <button type="button" class="btn btn-info">Banderas</button>
+            </nav>
         </div>
-      </div>
-      <nav class="text-center mt-4">
-        <button type="button" class="btn btn-info">Datos Generales</button>
-        <button type="button" class="btn btn-info">Datos Geográficos</button>
-        <button type="button" class="btn btn-info">Traducciones</button>
-        <button type="button" class="btn btn-info">Banderas</button>
-      </nav>
-    </header>
+        <div class="tab-content mt-4">
+            <div id="datosgenerales" class="container tab-pane active"><br>
+                <form action="" method="post">
+                    <div class="row">
+                        <div class="col">
+                            Continente:<select name="continente" class="form-select form-select-sm"
+                                onchange="cargarPaises(this.value)">
+                                <option value="0">Elige un continente</option>
+                                <option value="africa">Africa</option>
+                                <option value="americas">America</option>
+                                <option value="asia">Asia</option>
+                                <option value="europe">Europa</option>
+                                <option value="oceania">Oceania</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            País:<select id="paises" name="pais" class="form-select form-select-sm">
+                                <option value="0">Elige un país</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <table class="table table-stripped">
+                <tr>
+                    <th class="text-center">Capital</th>
+                    <th class="text-center">Población</th>
+                    <th class="text-center">Dominio</th>
+                    <th class="text-center">Área</th>
+                    <th class="text-center">Moneda</th>
+                </tr>
+                <tr>
+                    <td class="text-center">xxx</td>
+                    <td class="text-center">999</td>
+                    <td class="text-center">xxx</td>
+                    <td class="text-center">999</td>
+                    <td class="text-center">xxx</td>
+                </tr>
 
-    <div>
-      <div class="mt-4">
-        <div class="row">
-          <div class="col">
-            <p class="h3 text-center">Continente:</p><select name="continente" class="form-select form-select-sm">
-              <option value="0">Elige un continente</option>
-              <option value="Africa">África</option>
-              <option value="Americas">América</option>
-              <option value="Asia">Asia</option>
-              <option value="Europe">Europa</option>
-              <option value="Oceania">Oceania</option>
-            </select>
-          </div>
-          <div class="col">
-            <p class="h3 text-center">País:</p><select name="pais" class="form-select form-select-sm">
-              <option value="0">Elige un país</option>
-            </select>
-          </div>
+            </table>
+            <div id="traduccion" class="container tab-pane fade mt-4"><br>
+            </div>
+            <div id="banderas" class="container tab-pane fade"><br>
+            </div>
+
+            <div class="container text-center">
+                <h3 class="frontera1">Frontera 1</h3>
+                <h3 class="frontera2">Frontera 2</h3>
+                <h3 class="frontera3">Frontera 3</h3>
+                <h3 class="frontera4">Frontera 4</h3>
+                <h3 class="frontera5">Frontera 5</h3>
+            </div>
+
         </div>
-      </div>
     </div>
-    <table class="table table-stripped">
-      <tr>
-        <th class="text-center">Capital</th>
-        <th class="text-center">Población</th>
-        <th class="text-center">Dominio</th>
-        <th class="text-center">Área</th>
-        <th class="text-center">Moneda</th>
-      </tr>
-      <tr>
-        <td class="text-center">xxx</td>
-        <td class="text-center">999</td>
-        <td class="text-center">xxx</td>
-        <td class="text-center">999</td>
-        <td class="text-center">xxx</td>
-      </tr>
-
-    </table>
-  </div>
 </body>
 
 </html>
