--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -65,37 +65,50 @@
       <h2>Fronteras:</h2>
       <table class="w-100">
         <tr>
-          <td>
-            <h3 class="mx-auto">xxxxxxxxxx</h3>
-          </td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>
-            <h3>xxxxxxxxxx</h3>
-          </td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>
-            <h3>xxxxxxxxxx</h3>
-          </td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>
-            <h3>xxxxxxxxxx</h3>
-          </td>
-          <td></td>
-        </tr>
-        <tr>
-          <td> <h3>xxxxxxxxxx</h3>
-          </td>
-         
-      </table>
+            <td>
+              <h3 class="mx-auto">Capital: xxxxxxx</h3>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Población: 9999999999</h3>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Área: 99999999999</h3>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Moneda:</h3>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+            </td>
+            <td>
+              <h3>nombre: Euro</h3>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            </td>
+            <td>
+              <h3>Símbolo: €</h3>
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
-  </div>
+    <div class="row mx-auto w-50 mt-3 container-fluid">
+      <table>
+        <td>
+          <tr>
   
-</body>
-
-</html>
+            
+          </tr>
