--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>continente</h2>
 
         <select onchange="cargarPaises(this.value)"class="form-select" id="paises">
-          <option value="0">seleccione continente</option>
+          <option value="seleccione continente">seleccione continente</option>
           <option value="americas">AMERICA</option>
           <option value="africas">AFRICA</option>
           <option value="oceania">OCEANIA</option>
