--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -29,7 +29,7 @@
               <a class="nav-link active" href="#" onclick="dameDatosGenerales()">DATOS GENERALES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
+              <a class="nav-link active" href="#" onclick="await console.log ( dameNombrePaisporCodigo('and'))">DATOS GEOGRAFICOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">TRADUCCION</a>
@@ -58,11 +58,11 @@
       <div class="col-sm-6">
         <h2>paises</h2>
         <select id="paises" class="form-select">
-          <option value="0">seleccione pais</option>
+         <!-- <option value="0">seleccione pais</option>-->
 
         </select>
       </div>
-      <main  class="text-center mt-4">
+      <main >
       
       </main>
 
