--- a/Denis.html
+++ b/Denis.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="pruebasDenis.js"></script>
+    <script src="denis.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </header>
         <div>
             <nav class="text-center">
-                <button type="button" class="btn btn-info">Datos Generales</button>
+                <button onclick="datosGenerales('a')" class="btn btn-info">Datos Generales</button>
                 <button type="button" class="btn btn-info">Datos Geográficos</button>
                 <button type="button" class="btn btn-info">Traducciones</button>
                 <button type="button" class="btn btn-info">Banderas</button>
@@ -36,8 +36,7 @@
                 <form action="" method="post">
                     <div class="row">
                         <div class="col">
-                            Continente:<select name="continente" class="form-select form-select-sm"
-                                onchange="cargarPaises(this.value)">
+                            Continente:<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
                                 <option value="0">Elige un continente</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
@@ -54,38 +53,25 @@
                     </div>
                 </form>
             </div>
+            <main>
             <table class="table table-stripped">
-                <tr>
-                    <th class="text-center">Capital</th>
-                    <th class="text-center">Población</th>
-                    <th class="text-center">Dominio</th>
-                    <th class="text-center">Área</th>
-                    <th class="text-center">Moneda</th>
+                <tr">
+                  <th class="text-center">Capital</th>
+                  <th class="text-center">Población</th>
+                  <th class="text-center">Dominio</th>
+                  <th class="text-center">Área</th>
+                  <th class="text-center">Moneda</th>
                 </tr>
                 <tr>
-                    <td class="text-center">xxx</td>
-                    <td class="text-center">999</td>
-                    <td class="text-center">xxx</td>
-                    <td class="text-center">999</td>
-                    <td class="text-center">xxx</td>
+                  <td class="text-center">xxx</td>
+                  <td class="text-center">999</td>
+                  <td class="text-center">xxx</td>
+                  <td class="text-center">999</td>  
+                  <td class="text-center">xxx</td>
                 </tr>
-
-            </table>
-            <div id="traduccion" class="container tab-pane fade mt-4"><br>
-            </div>
-            <div id="banderas" class="container tab-pane fade"><br>
-            </div>
-
-            <div class="container text-center">
-                <h3 class="frontera1">Frontera 1</h3>
-                <h3 class="frontera2">Frontera 2</h3>
-                <h3 class="frontera3">Frontera 3</h3>
-                <h3 class="frontera4">Frontera 4</h3>
-                <h3 class="frontera5">Frontera 5</h3>
-            </div>
-
-        </div>
-    </div>
+          
+              </table>
+            </main>
 </body>
 
 </html>
