--- a/index bandera.html
+++ b/index bandera.html
@@ -67,7 +67,7 @@
           <option value="3">Three</option>
         </select>
       </div>
-      <h2>banderas</h2>
+     <!--<h2>banderas</h2>--> 
 
       <table class="table table-bordered">
         <thead>
