--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="paisesPrincipal.js"></script>
+  <script src="paisesPrincipal.js" defer></script>
   
 </head>
 
@@ -62,7 +62,7 @@
 
         </select>
       </div>
-      <main >
+      <main>
       
       </main>
 
