--- a/Denis.html
+++ b/Denis.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="denis.js"></script>
+    <script src="denis.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </header>
         <div>
             <nav class="text-center">
-                <button onclick="datosGenerales('a')" class="btn btn-info">Datos Generales</button>
+                <button onclick="pintaDatosGenerales('a')" class="btn btn-info">Datos Generales</button>
                 <button type="button" class="btn btn-info">Datos Geográficos</button>
                 <button type="button" class="btn btn-info">Traducciones</button>
                 <button type="button" class="btn btn-info">Banderas</button>
