--- a/David/index.html
+++ b/David/index.html
@@ -32,8 +32,6 @@
                     </div>
                 </nav>
 
-
-
                 <nav class="mt-3">
                     <div class="container-fluid">
                         <ul class="nav nav-justified" id="ex1">
@@ -61,6 +59,7 @@
                         </div>
                         <div class="d-inline-block">
                             <select class="form-select" id="continent" style="width:auto;">
+                                <option value="" selected>Seleccione un continente</option>
                                 <option value="asia">Asia</option>
                                 <option value="america">America</option>
                                 <option value="europe">Europa</option>
@@ -117,9 +116,7 @@
             <section>
                 <div class="tab-content container mt-3">
                     <div class="tab-pane face show" id="traducir">
-                        <div class="mt-5 border"></div>
-
-                        <div class="accordion accordion-flush">
+                        <!--<div class="accordion accordion-flush">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -170,7 +167,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
 
