--- a/Denis.html
+++ b/Denis.html
@@ -25,7 +25,7 @@
         </header>
         <div>
             <nav class="text-center">
-                <button onclick="datosGenerales('a')" class="btn btn-info">Datos Generales</button>
+                <button onclick="pintaDatosGenerales('a')" class="btn btn-info">Datos Generales</button>
                 <button type="button" class="btn btn-info">Datos Geográficos</button>
                 <button type="button" class="btn btn-info">Traducciones</button>
                 <button type="button" class="btn btn-info">Banderas</button>
