--- a/indexdark.html
+++ b/indexdark.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styledark.css">
     <script src="paises.js"></script>
+    <script datosgenerales.js></script>
 </head>
 
 <body>
@@ -125,7 +126,8 @@
                 </ul>
             </div>
         </div>
-
+    <!--barra de navegacion datos generales, geografria, idioma, bandera..
+    -->
         <div class="row">
             <div class="col megacol">
                 <ul class="nav nav-tabs nav-justified mt-5 textocabeceras">
