--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!-- INICIO DE HEADER-->
                 <nav class="navbar-brand bg-light">
                     <!--<div class="mundo"></div>-->
-                    <div class="d-block overflow-hidden" style="background-color: rgb(3, 247, 154)">
+                    <div class="d-block overflow-hidden" style="background-color: rgb(246,211,169)">
                         <div class="float-start" style="width: 150px; height: 120px">
                             <img src="images/world1.png" style="width: 150px; height: 120px">
                         </div>
