--- a/indexdark.html
+++ b/indexdark.html
@@ -89,7 +89,7 @@
                             <img src="imagenes/world.svg" width="45px" class="bg-light rounded-circle icononasa" />
                             <div class="ms-3">
                                 <p class="fw-bold mb-1">
-                                    <select name="continente" class="opcionescontinentescasilla p-0" id="seleccionarpaises" onchange="opcionescontinente(value)">
+                                    <select name="continente" class="opcionescontinentescasilla p-0" id="seleccionarPaises" onchange="opcionesContinente(value)">
                                         <option class="opcionescontinentes" value="continente" >Selecciona
                                             Continente</option>
                                         <option class="opcionescontinentes" value="asia">Asia</option>
