--- a/calculadora.html
+++ b/calculadora.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="calculadora.js" defer></script>
+    <script src="calculadorados.js" defer></script>
 </head>
 
 <body>
