--- a/marche.html
+++ b/marche.html
@@ -24,13 +24,13 @@
                 </div>
             </div>
         </header>
-            <nav class="text-center">
-                <button type="button" class="btn btn-primary">Datos Generales</button>
-                <button type="button" class="btn btn-primary">Datos Geográficos</button>
-                <button type="button" class="btn btn-primary">Traducciones</button>
-                <button type="button" class="btn btn-primary">Banderas</button>
-            </nav>
-       
+        <nav class="text-center">
+            <button type="button" class="btn btn-primary">Datos Generales</button>
+            <button type="button" class="btn btn-primary">Datos Geográficos</button>
+            <button type="button" class="btn btn-primary">Traducciones</button>
+            <button type="button" class="btn btn-primary">Banderas</button>
+        </nav>
+
 
         <div class="tab-content">
             <form action="" method="post">
@@ -46,6 +46,7 @@
                                 <option value="oceania">Oceania</option>
                             </select>
                         </div>
+
                         <div class="col">
                             Paises:<select id="paises" class="form-select">
                                 <option value="0">Elige un país</option>
@@ -58,6 +59,8 @@
                 <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
                     data-bs-target="#demo0">idioma1
                 </button>
+
+
                 <div id="demo0" class="collapse">
                     ESTOS SON LOS IDIOMAS
                 </div><br>
@@ -91,6 +94,10 @@
                 <br>
             </div>
         </div>
+
+
 </body>
 
 </html>
+
+*/Web https://restcountries.com/v3.1/name/peru*/
