--- a/paisesPrincipal.html
+++ b/paisesPrincipal.html
@@ -28,7 +28,7 @@
     <div class="container mt-3">
       <ul class="nav nav-pills nav-justified">
         <li class="nav-item">
-          <a class="nav-link active bg-success" href="#" onclick="ponerDatosGenerales()">Datos generales</a>
+          <button class="nav-link active bg-success" href="#" onclick="dameDatosGenerales()">Datos generales</button>
         </li>
         <li class="nav-item">
           <a class="nav-link active bg-success" href="#">Datos geograficos</a>
