--- a/paises1.html
+++ b/paises1.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/estilo.css">
-    <script type="text/javascript" src="js/mundo.js" defer></script>
+    <script type="text/javascript" src="paisesEjemplo.js" defer></script>
    
     
 </head>
