--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#d2eeb6;">
   <div class="container">
     <header>
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
