--- a/oscar.html
+++ b/oscar.html
@@ -26,7 +26,7 @@
         <div>
             <nav class="text-center">
                 <button type="button" class="btn btn-info">Datos Generales</button>
-                <button type="button" onclick="datosGeograficos('a')" class="btn btn-info">Datos Geográficos</button>
+                <button type="button" onclick="datosGeograficos()" class="btn btn-info">Datos Geográficos</button>
                 <button type="button" class="btn btn-info">Traducciones</button>
                 <button type="button" class="btn btn-info">Banderas</button>
             </nav>
