--- a/paises1.html
+++ b/paises1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="estilos.css">
     <script type="text/javascript" src="paisesEjemplo.js" defer></script>
    
     
