--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -21,11 +21,11 @@
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
         align="right" width="227" height="156">
       <div class="container-fluid p-5 bg-success text-white text-center ">
-
         <h1>PAISES DEL MUNDO</h1>
       </div>
     </header>
 
+    <nav>
     <div class="container mt-3">
       <ul class="nav nav-pills nav-justified">
         <li class="nav-item">
@@ -42,7 +42,8 @@
         </li>
       </ul>
     </div>
-
+  </nav>
+  
     <div class="row mt-5">
       <div class="col">
         <h2>Seleccione Continente</h2>
