--- a/indexdark.html
+++ b/indexdark.html
@@ -85,7 +85,7 @@
                 <ul class="list-group list-group-light mb-0">
                     <li class="list-group-item d-flex justify-content-center align-items-center textoselects">
                         <div class="d-flex align-items-center">
-                            <img src="imagenes/world.svg" width="45px" class="bg-light rounded-circle icononasa"/>
+                            <img src="imagenes/world.svg" width="45px" class="bg-light rounded-circle guisiguenteparpadeo" id="iconoContinente"/>
                             <div class="ms-3">
                                 <p class="fw-bold mb-1">
                                     <select name="continente" class="opcionescontinentescasilla p-0" id="seleccionaContinente" onchange="elegirContinente(value)">
@@ -113,7 +113,7 @@
                 <ul class="list-group list-group-light mb-0">
                     <li class="list-group-item d-flex justify-content-center align-items-center textoselects">
                         <div class="d-flex align-items-center">
-                            <img src="imagenes/map-search.svg" width="45px" class="bg-light rounded-circle icononasa" />
+                            <img src="imagenes/map-search.svg" width="45px" class="bg-light rounded-circle guisiguente" id="iconoPais"/>
                             <div class="ms-3">
                                 <p class="fw-bold mb-1"><select name="pais" class="opcionescontinentescasilla p-0" id="seleccionaPais" onchange="elegirPais(value)">
                                         <option class="opcionescontinentes" value="null">Selecciona
