--- a/David/Empleado/index.html
+++ b/David/Empleado/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empleado</title>
-    <!--<script type="text/javascript" src="js/empleado.js"></script>-->
-    <script type="text/javascript" src="js/callback.js" defer></script>
+    <script type="text/javascript" src="js/empleado.js"></script>
 </head>
 
 <body>
