--- a/clases.html
+++ b/clases.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="clases.js"></script>
+    <script src="clases.js" defer></script>
 </head>
 <body>
     <div>
-        
+        <button onclick="tablaDatos()">Pulsar</button>
     </div>
 </body>
 </html>
